<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Quản lý chi tiêu</string>
    <string name="tab_expense">Chi tiêu</string>
    <string name="tab_income">Thu nhập</string>
    <string name="balance">Số dư</string>
    <string name="login">Đăng nhập</string>
    <string name="email">Email</string>
    <string name="password">Mật khẩu</string>
    <string name="register">Đăng ký</string>
    <string name="hint_date">Ngày</string>
    <string name="cancel">Hủy</string>
    <string name="click_to_login">Nhấn để đăng nhập</string>
    <string name="click_to_register">Nhấn để đăng ký</string>
    <string name="hint_expense_note">Ghi chú</string>
    <string name="hint_expense_amount">Số tiền</string>
    <string name="label_expense_paid">Đã trả</string>
    <string name="category">Danh mục</string>
    <string name="button_add_expense">Thêm</string>
    <string name="chart_tab_expense">Chi tiêu</string>
    <string name="chart_tab_income">Thu nhập</string>
    <string name="chart_tab_balance">Số dư</string>
    <string name="chart_button_ok">OK</string>
    <string name="chart_amount_default">+0</string>
    <string name="chart_expense_default">Chi tiêu\n-0đ</string>
    <string name="chart_income_default">Thu nhập\n+0đ</string>
    <string name="chart_balance_default">Số dư\n+0đ</string>
    <string name="chart_prev">Trước</string>
    <string name="chart_next">Tiếp</string>
    <string name="expend">Chi tiêu</string>
    <string name="income">Thu nhập</string>
    <string name="hello_user">Xin chào %1$s</string>
    <string name="bntaddavatar">Tải ảnh đại diện</string>
    <string name="full_name">Họ và tên</string>
    <string name="birthdate">Ngày sinh</string>
    <string name="bntsave">Lưu</string>
    <string name="enterNewTransaction">Nhập giao dịch mới</string>

    <string-array name="expense_types">
        <item>Thu nhập</item>
        <item>Chi tiêu</item>
    </string-array>

    <string-array name="income_categories">
        <item>Lương</item>
        <item>Thưởng</item>
        <item>Lãi đầu tư</item>
        <item>Thu nhập phụ</item>
        <item>Khác</item>
    </string-array>

    <string-array name="expend_categories">
        <item>Ăn uống</item>
        <item>Đi lại</item>
        <item>Mua sắm</item>
        <item>Giải trí</item>
        <item>Hóa đơn</item>
        <item>Khác</item>
    </string-array>

    <string-array name="view_modes">
        <item>Ngày</item>
        <item>Tháng</item>
        <item>Năm</item>
    </string-array>

    <string-array name="months_array">
        <item>Th1</item>
        <item>Th2</item>
        <item>Th3</item>
        <item>Th4</item>
        <item>Th5</item>
        <item>Th6</item>
        <item>Th7</item>
        <item>Th8</item>
        <item>Th9</item>
        <item>Th10</item>
        <item>Th11</item>
        <item>Th12</item>
    </string-array>

    <string name="logout">Đăng xuất</string>
    <string name="title_activity_login">Đăng nhập</string>
    <string name="edit_profile">Chỉnh sửa hồ sơ</string>
    <string name="change_theme">Thay đổi giao diện</string>
    <string name="change_language">Thay đổi ngôn ngữ</string>

    <string name="choose_theme">Chọn giao diện</string>
    <string-array name="theme_names">
        <item>Giao diện Xanh Biển</item>
        <item>Giao diện Xanh Lá</item>
        <item>Giao diện Tím</item>
        <item>Giao diện Cam</item>
    </string-array>
    <string name="select_lang">Chọn ngôn ngữ</string>
    <string name="hello">Xin chào </string>
    <string name="deleteTitle">Xác nhận xóa</string>
    <string name="deleteMessage">Ban có chắc muốn xóa chi tiêu này?</string>
    <string name="delete">Xóa</string>
    <string name="home">Trang chủ</string>
    <string name="calendar">Lịch</string>
    <string name="statistic">Thống kê</string>
    <string name="settings">Cài đặt</string>
    <string name="error_loading_image">Lỗi khi tải ảnh</string>
</resources>
